@@ -3,11 +3,17 @@ package tw.com.ispan.eeit.controller.store;
 import java.io.File;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -15,31 +21,99 @@ import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
-import tw.com.ispan.eeit.model.dto.StoreDto;
+import tw.com.ispan.eeit.model.dto.store.StoreDTO;
 import tw.com.ispan.eeit.model.entity.store.StoreBean;
-import tw.com.ispan.eeit.model.mapper.StoreMapper;
 import tw.com.ispan.eeit.service.store.StoreService;
 
 @RestController
-@RequestMapping("/api/store")
+@RequestMapping("/api/stores")
 public class StoreController {
+
     @Autowired
     private StoreService storeService;
 
     @GetMapping
-    public List<StoreDto> getAllStores() {
-        return storeService.getAllStores()
-            .stream()
-            .map(StoreMapper::toDto)
-            .toList();
+    public ResponseEntity<List<StoreDTO>> getAllStores() {
+        // 確保 storeService.getAllStores() 會預先載入 categories, comments, foods, tags
+        // 這可能需要在 StoreRepository 中使用 @EntityGraph 或 JOIN FETCH
+        // 因為 DTO 的建構子會訪問這些集合
+        List<StoreBean> stores = storeService.getAllStores();
+        List<StoreDTO> storeDTOs = stores.stream()
+                .map(StoreDTO::new) // 將 StoreBean 轉換為 StoreDTO
+                .collect(Collectors.toList());
+        return new ResponseEntity<>(storeDTOs, HttpStatus.OK);
     }
 
     @GetMapping("/{id}")
-    public StoreDto getStoreById(@PathVariable Integer id) {
-        return StoreMapper.toDto(storeService.getStoreById(id));
+    public ResponseEntity<StoreDTO> getStoreById(@PathVariable Integer id) {
+        Optional<StoreBean> storeOptional = storeService.getStoreById(id);
+        return storeOptional.map(storeBean -> {
+            StoreDTO storeDTO = new StoreDTO(storeBean); // 將 StoreBean 轉換為 StoreDTO
+            return new ResponseEntity<>(storeDTO, HttpStatus.OK);
+        }).orElseGet(() -> new ResponseEntity<>(HttpStatus.NOT_FOUND));
     }
 
-    // 支援多張照片的註冊
+    @PostMapping
+    public ResponseEntity<StoreDTO> createStore(@RequestBody StoreDTO storeDto) {
+        // 將 StoreDTO 轉換回 StoreBean 以便 service 層處理
+        StoreBean storeToCreate = new StoreBean();
+        // 使用 BeanUtils.copyProperties 可以複製相同的屬性名稱
+        // 但對於複雜的嵌套 DTO 或關聯，你需要手動轉換或使用 MapStruct 等映射工具
+        storeToCreate.setName(storeDto.getName());
+        storeToCreate.setPhoto(storeDto.getPhoto());
+        storeToCreate.setScore(storeDto.getScore());
+        storeToCreate.setIsOpen(storeDto.getIsOpen());
+        // 對於 categoryNames, comments, foods，如果你在創建時需要設置這些關聯，
+        // 你需要根據 DTO 中的資訊從資料庫查詢對應的 Bean，並設置到 storeToCreate 中。
+        // 例如：
+        // if (storeDto.getCategoryNames() != null &&
+        // !storeDto.getCategoryNames().isEmpty()) {
+        // List<CategoryBean> categories =
+        // categoryRepository.findByNameIn(storeDto.getCategoryNames());
+        // storeToCreate.setCategories(categories);
+        // }
+        // 否則，在創建或更新時，這些集合通常不會直接從 JSON 傳入。
+        // 你需要根據業務邏輯決定如何處理這些關聯。
+        // 暫時假設這些集合在創建時不會直接傳入，或者由 Service 層負責處理。
+
+        StoreBean createdStoreBean = storeService.createStore(storeToCreate);
+
+        // 將創建後的 StoreBean 轉換回 StoreDTO 返回給客戶端
+        StoreDTO createdStoreDTO = new StoreDTO(createdStoreBean);
+        return new ResponseEntity<>(createdStoreDTO, HttpStatus.CREATED);
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<StoreDTO> updateStore(@PathVariable Integer id, @RequestBody StoreDTO storeDetailsDto) {
+        // 將 StoreDTO 轉換回 StoreBean 以便 service 層處理更新
+        StoreBean storeToUpdate = new StoreBean();
+        storeToUpdate.setName(storeDetailsDto.getName());
+        storeToUpdate.setPhoto(storeDetailsDto.getPhoto());
+        storeToUpdate.setScore(storeDetailsDto.getScore());
+        storeToUpdate.setIsOpen(storeDetailsDto.getIsOpen());
+        // 同樣，對於關聯集合的更新，你需要根據業務邏輯處理
+        // 例如，如果前端傳入新的 categoryNames，你可能需要在 service 層更新 StoreBean 的 categories 集合
+        // storeDetailsDto.getCategoryNames(); // <-- 這裡會包含前端傳來的類別名稱
+
+        StoreBean updatedStoreBean = storeService.updateStore(id, storeToUpdate);
+
+        if (updatedStoreBean != null) {
+            // 將更新後的 StoreBean 轉換回 StoreDTO 返回
+            StoreDTO updatedStoreDTO = new StoreDTO(updatedStoreBean);
+            return new ResponseEntity<>(updatedStoreDTO, HttpStatus.OK);
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<HttpStatus> deleteStore(@PathVariable Integer id) {
+        if (storeService.deleteStore(id)) {
+            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+    }
+    
+ // 支援多張照片的註冊
     @PostMapping(value = "/registerInfo", consumes = "multipart/form-data")
     public Map<String, Object> register(
         @RequestParam("ownerId") Integer ownerId,
